# maenv

./: LICENSE  README.md  play_dusty_island.py  pyproject.toml  requirements.txt
maenv/: __init__.py
maenv/core/: actions.py  cardinal_direction.py  direction.py  id_manager.py  maenv.py  state.py  tile.py  tile_map.py
maenv/core/objects/: active_object.py  collision_object.py  game_object.py  passive_object.py
maenv/dusty_island/: dusty_env.py
maenv/dusty_island/consts/: actions.py  artifact.py  axe.py  bombs.py  bullets.py  dusty.py  game.py  summon.py  tree.py
maenv/dusty_island/consts/weapons/: magic_weapons.py  normal_weapons.py
maenv/dusty_island/maps/: CL_MainLev_32.tsx  default_map.py  default_map.tmx
maenv/dusty_island/objects/: artifact.py  bullets.py  summons.py  tree.py
maenv/dusty_island/objects/bombs/: __init__.py  bomb.py  fire_bomb.py  poison_bomb.py
maenv/dusty_island/objects/dusties/: __init__.py  colonists.py  dusty.py  guardians.py
maenv/dusty_island/objects/items/: __init__.py  pickup_item.py  unowned_weapon.py
maenv/dusty_island/objects/trees/: __init__.py  tree.py  trimmed_tree.py
maenv/dusty_island/objects/weapons/: __init__.py  unowned_weapon.py  weapon.py  weapons.py
maenv/dusty_island/objects/weapons/axes/: __init__.py  fire_axe.py  normal_axe.py
maenv/dusty_island/objects/weapons/magic/: __init__.py  magic_gun.py  magic_staff.py  magic_weapon.py
maenv/dusty_island/objects/weapons/normal/: axe.py  stone.py
maenv/utils/: __init__.py  colors.py
